# proposals

./: .cmake-format.yaml  .gitignore  .gitorder  CMakeLists.txt  CONTRIBUTING.md  README.md  is_clamped.md  number_concepts.md
cmake/modules/: JohelEGPProposalsDownloadCPM.cmake  JohelEGPProposalsResolveDependencies.cmake  JohelEGPProposalsUpdateDependencyCopies.cmake
number_concepts/: CMakeLists.txt  README.md  intro.tex  macros_extensions.tex  macros_extensions.tex.in  numbers.tex  paper-acknowledgements.tex  paper-api.tex  paper-comparisons.tex  paper-design.tex  paper-evolution.tex  paper-history.tex  paper-intro.tex  paper-references.tex  paper-revs.tex
